[project]
name = "test-rl"
version = "0.1.0"
description = "Test RL Framework"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "rlframework",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_rl"]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.uv.sources]
rlframework = { git = "ssh://git@github.com/liuaibin/rlframework.git", branch = "main" }

[dependency-groups]
dev = []
